# Hydrusv2

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  camera-entrypoint.sh  catkin.sh  docker-compose.yml  hydrus.Dockerfile  requirements.txt  ros-entrypoint.sh
.devcontainer/: devcontainer.json
configs/: topics.yml
controller_node/: CMakeLists.txt  CmakeLists.txt  package.xml
controller_node/launch/: control.launch  controller.launch
controller_node/scripts/: call_target_point.py  call_target_pose.py  set_parameters.py  subscriber_demo.py
controller_node/src/: controller.py
controller_node/srv/: NavigateToWaypoint.srv  SetParameters.srv
detector_node/: CMakeLists.txt  package.xml
detector_node/launch/: detector.launch  zed_rosbag.launch
detector_node/params/: ultralytics.yml
detector_node/scripts/: enable_detector.py  set_custom_classes.py  yolo_enable.py
detector_node/src/: node.py  server.py  subscriber_example.py
detector_node/srv/: EnableDetector.srv
docker/Controller/: Dockerfile
embedded_arduino/: README.md  library.properties
embedded_arduino/src/: devices.h  ros_embedded_node.cpp  ros_embedded_node.h  thrusters.cpp
hydrus/launch/: control_pipeline.launch  fastapi_server.launch  run_submarine.launch
mission_node/: CMakeLists.txt  package.xml
mission_node/launch/: go_around_object.launch
mission_node/src/: edge_cases.py  move_around_object.py  task.py  (+3 more)
params/: topics.yml
scripts/: set_custom_classes.py  yolo_enable.py
src/: controller.py  detector.py  read.py  sub.py  zed_sim.py
srv/: SetCustomClasses.srv
(+1 files in other folders)
